tests/cases/modules/ok/same_filename_project.ari
pub mod left;
pub mod right;

pub fn run() -> i64 {
  return self::left::value() + self::right::value();
}
