tests/cases/modules/errors/private-nested-module.ari
mod Outer {
  mod Inner {
    pub fn value() -> i64 {
      return 1;
    }
  }

  pub fn inside() -> i64 {
    return self::Inner::value();
  }
}

fn main() -> i64 {
  return Outer::Inner::value();
}
